@@ -1,4 +1,6 @@
 {{$NEXT}}
+    Added GenericExecutor Watcher to periodically execute arbitrary command
+    	  and watch/view it's output
     [API] Watcher Memory now stores 'active' state of Watcher
     [API] Watcher role now requires 'callback' parameter in instance construction,
     	  'start' method does not takes the callback as 2nd parameter any more
